	<resources>

    <string name="app_name">想你</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_welcome">想你</string>
    <!-- welcome activity xml  loading image -->
    <string name="desc">启动页面</string>
    <!-- chat activity pull to refresh -->
    <string name="get_more">获取更多</string>
    <string name="release_to_refresh">松开刷新</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="updating">最近更新：</string>
    <string name="email">邮箱</string>
    <string name="password">密码</string>
    <string name="me">我</string>
    <string name="ta">TA</string>
    <string name="housestyle">小屋</string>
    <string name="software">软件</string>
    	<string name="a0">广州顶毅电子有限公司"想你"应用软件服务协议</string>
    <string name="a1">&#160;&#160;&#160;&#160;本应用软件服务用户协议（以下简称“用户协议”）是由用户（您）与广州顶毅电子有限公司（以下简称“顶毅”）就顶毅提供的应用软件产品——“想你”及相关服务所订立的相关权利义务规范，本用户协议对您及顶毅均具有法律效力。</string>
	<string name="a2">&#160;&#160;&#160;&#160;顶毅在此特别提醒您，在您安装使用“想你”应用软件前，请您务必审慎阅读、充分理解各条款内容（未成年人应在法定监护人陪同下阅读）。除非您接受本《用户协议》所有条款，否则您无权下载、安装或使用本软件及其相关服务。如果您对本协议的任何条款及/或将来随时修改、补充的条款有异议，您可选择不使用本软件。您的下载、安装、使用、帐号获取和登录等行为将视为对本《用户协议》的接受，并同意接受本《用户协议》各项条款的约束。
\n&#160;&#160;&#160;&#160;本《用户协议》可由顶毅随时更新，且毋须另行通知。用户可重新下载安装本软件或网站查阅最新版协议条款。在顶毅修改《用户协议》条款后，如果用户不接受修改后的条款，请立即停止使用顶毅提供的软件和服务，您继续使用顶毅提供的软件和服务将被视为已接受了修改后的协议。</string>
    <string name="a3">&#160;&#160;&#160;&#160;顶毅运用自己的操作系统通过国际互联网络为用户提供社交服务，包括但不限于在线通讯、个人档案、地理位置、日记、相册等，而且上述服务是免费的。但是，用户必须自行配备上网和使用电信增值业务所需的设备，自行负担个人上网或第三方（包括但不限于电信或移动通信提供商）收取的通讯费、信息费等有关费用。</string>
    <string name="a4">&#160;&#160;&#160;&#160;您可以直接从顶毅的网站上获取本软件，也可以从得到顶毅授权的第三方获取。
\n&#160;&#160;&#160;&#160;如果您从未经顶毅授权的第三方获取本软件或与本软件名称相同的安装程序，顶毅无法保证该软件能够正常使用，并对因此给您造成的损失不予负责。下载安装程序后，您需要按照该程序提示的步骤正确安装。</string>
    <string name="a5">&#160;&#160;&#160;&#160;您在注册帐号或使用本服务的过程中，可能需要填写一些必要的个人信息。若国家法律法规有特殊规定的，您需要填写真实的身份信息。若您填写的信息不完整或者不真实，则无法使用本服务或在使用过程中受到限制。
\n&#160;&#160;&#160;&#160;一般情况下，您可随时浏览、修改自己提交的信息，但出于安全性和身份识别（如号码申诉服务）的考虑，您可能无法修改注册时提供的初始注册信息及其他验证信息。
\n&#160;&#160;&#160;&#160;顶毅将运用各种安全技术和程序建立完善的管理制度来保护您的个人信息，以免遭受未经授权的访问、使用或披露。\n
&#160;&#160;&#160;&#160;未经您的同意，顶毅不会向顶毅以外的任何公司、组织和个人披露您的个人信息，但法律法规另有规定的除外（详见“用户隐私保护”条款）。</string>
    <string name="a6">&#160;&#160;&#160;&#160;您在使用顶毅的软件服务时需要注册一个帐号并进行配对方可使用。在安全完成软件服务的登记程序并收到一个密码及帐号后，用户应维持密码及帐号的机密安全。您应对任何人利用您的密码及帐号所进行的活动负完全的责任，顶毅无法对非法或未经您授权使用您帐号及密码的行为作出甄别，因此顶毅不承担任何责任。</string>
    <string name="a7">&#160;&#160;&#160;&#160;除非与顶毅另签协议，用户同意本服务仅供个人非商业性质的使用。用户承诺未经顶毅事先书面同意，不得利用本服务进行广告、销售、商业展示等商业性用途。如果顶毅发现用户利用本软件服务进行以上行为，有权对用户账号进行暂时性或永久性封禁，且不需要对用户另行通知。</string>
    <string name="a8">&#160;&#160;&#160;&#160;您在使用本软件服务的过程中需要下载软件，顶毅给予您一项个人的、不可转让及非排他性的许可。您仅可为访问或使用本软件服务的目的而使用这些软件。用户不得使用任何私服外挂软件进行刷积分、等级、经验值和金币等行为，一经发现，顶毅有权立即对该用户进行封禁，且不需要对用户另行通知。</string>
    <string name="a9">&#160;&#160;&#160;&#160;为了改善用户体验、保证服务的安全性及产品功能的一致性，顶毅会不定期对软件进行更新。您应该将相关软件更新到最新版本，否则顶毅并不保证其能正常使用。</string>
    <string name="a10">&#160;&#160;&#160;&#160;如果用户使用“想你”软件服务，即表示用户愿意接受“想你”软件服务发出的相关邮件或顶毅系统消息（包括但不限于商品促销等广告信息）。因此而有可能给用户带来的不便，顶毅公司不负担任何责任。</string>
    <string name="a11">&#160;&#160;&#160;&#160;您不得利用本软件服务进行故意制作、传播计算机病毒等破坏性程序，不得针对本服务、与本软件服务连接的服务器或网络制造干扰、混乱，或违反连接本服务的网络的任何要求、程序、政策或规则，否则顶毅将保留追究其法律责任的权利并有权将其提交给相关部门处理。</string>
    <string name="a12">&#160;&#160;&#160;&#160;您同意遵守《中华人民共和国民法通则》、《中华人民共和国著作权法》、《中华人民共和国保守国家秘密法》、《中华人民共和国计算机信息系统安全保护条例》、《计算机软件保护条例》、《最高人民法院关于审理涉及计算机网络著作权纠纷案件适用法律若干问题的解释(法释[2004]1号)》、《互联网著作权行政保护办法》、《互联网新闻信息服务管理规定》等有关国家法律和法规、实施办法。
\n&#160;&#160;&#160;&#160;在任何情况下，如用户违反国家法律法规或本服务条款，顶毅可以在任何时候，不经事先通知终止向该您提供服务。如导致顶毅遭受任何损害或遭受任何来自第三方的纠纷、诉讼、索赔要求等，您须向顶毅赔偿相应的损失，用户应当对其违反法律法规或本协议服务条款所产生的一切后果负全部法律责任。</string>
    <string name="a13">&#160;&#160;&#160;&#160;顶毅可能会对服务内容进行变更，也可能会中断、中止或终止服务。如发生下列任何一种情形，顶毅有权不经通知而中断或终止向您提供的服务：
\n&#160;&#160;&#160;&#160;（1）根据法律规定您应提交真实信息，而您提供的个人资料不真实、或与注册时信息不一致又未能提供合理证明；
\n&#160;&#160;&#160;&#160;（2）您违反相关法律法规或本协议的约定；
\n&#160;&#160;&#160;&#160;（3）按照法律规定或主管部门的要求；
\n&#160;&#160;&#160;&#160;（4）出于安全的原因或其他必要的情形。</string>
    <string name="a14">&#160;&#160;&#160;&#160;您完全理解并同意，本服务涉及到互联网及移动通讯等服务，可能会受到各个环节不稳定因素的影响。因此服务存在因上述不可抗力、计算机病毒或黑客攻击、系统不稳定、用户所在位置、用户关机、GSM网络、互联网络、通信线路原因等造成的服务中断或不能满足用户要求的风险。使用本服务的用户须承担以上风险，顶毅对服务之及时性、安全性、准确性不作担保，对因此导致用户不能发送和接受阅读消息、或传递错误，个人设定之时效、未予储存或其他问题不承担任何责任。对于不可抗力或非顶毅过错原因导致的用户数据损失、丢失或服务停止，顶毅将不承担任何责任。</string>
    <string name="a15">&#160;&#160;&#160;&#160;对于系统发生故障影响到本服务的正常运行，顶毅承诺及时处理进行修复。但用户因此而产生的经济和精神损失，顶毅不承担责任。此外，顶毅保留不经事先通知为维修保养、升级或其他目的暂停本软件服务任何部分的权利。</string>
    <string name="a16">&#160;&#160;&#160;&#160;用户完全理解并同意，若因不可抗因素，第三方在您不知情或未经您同意的前提下，将您的文字、图片、地理位置等发布于其他渠道及由此所产生的任何可能侵害您权益的行为，顶毅均不对任何人承担任何责任。</string>
    <string name="a17">&#160;&#160;&#160;&#160;用户完全理解并同意，通过本软件服务收到广告信息，进而与广告商进行任何形式的商业往来，或参与促销活动，包含相关商品或服务之付款及交付，以及达成的其他任何相关条款、条件、保证或声明，完全为您与广告商之间之行为。除有关法律有明文规定要求顶毅承担责任以外，您因前述任何交易或前述广告商而遭受的任何性质的损失或损害，顶毅均不予负责。</string>
    <string name="a18">&#160;&#160;&#160;&#160;如发生下列任何一种情形，顶毅有权随时中断或终止向用户提供服务而无需通知该用户：
  \n&#160;&#160;&#160;&#160;1)	用户提供的个人资料不真实；
  \n&#160;&#160;&#160;&#160;2)	用户违反本服务条款的规定；
  \n&#160;&#160;&#160;&#160;3)	按照主管部门的要求；
  \n&#160;&#160;&#160;&#160;4)	用户注册后长期闲置不用的帐号及相应的域名
  \n&#160;&#160;&#160;&#160;5)	顶毅收到第三方投诉且该第三方出具相应证据</string>
    <string name="a19">&#160;&#160;&#160;&#160;顶毅在本服务中提供的内容（包括但不限于界面、文字、图片、音频、视频、图表等）的知识产权归顶毅所有，用户在使用本服务中所产生的内容的知识产权归用户或相关权利人所有。
\n&#160;&#160;&#160;&#160;除另有特别声明外，顶毅提供本服务时所依托自主软件的著作权、专利权及其他知识产权均归顶毅所有。除非法律允许或腾讯书面许可，您使用本软件过程中不得删除本软件及其副本上关于著作权的信息，不得对本软件进行反向工程、反向汇编、反向编译，或者以其他方式尝试发现本软件的源代码。
\n&#160;&#160;&#160;&#160;顶毅在本服务中所使用的“想你”、“MiniUs”、Logo、人物形象等商业标识，其著作权或商标权归顶毅所有。
\n&#160;&#160;&#160;&#160;上述及其他任何本服务包含的内容的知识产权均受到法律保护，未经顶毅、用户或相关权利人书面许可，任何人不得以任何形式进行使用或创造相关衍生作品。</string>
    <string name="a20">&#160;&#160;&#160;&#160;保护用户个人隐私是顶毅的一项基本政策。所以，除非依据国家法律规定在有关国家机关查询时、遵守顶毅产品的特定程序、为维护顶毅的合法权益、被侵害的第三人提出权利主张或在紧急情况下竭力维护用户个人和社会大众的隐私安全的，顶毅不会公开、编辑或透露用户的注册资料及保存在本服务中的非公开内容。
          \n&#160;&#160;&#160;&#160;在以下（包括但不限于）几种情况下，用户同意顶毅使用用户的个人信息：
  \n&#160;&#160;&#160;&#160;1)	在进行促销或抽奖时，顶毅可能会与赞助商共享用户的个人信息，在这些情况下顶毅会在发送用户信息之前进行提示，并且用户可以通过不参与来终止传送过程。
  \n&#160;&#160;&#160;&#160;2)	顶毅可以将用户信息与第三方数据匹配。
  \n&#160;&#160;&#160;&#160;3)	顶毅会通过透露用户统计数据，向未来的合作伙伴、广告商及其他第三方以及为了其他合法目的而描述顶毅的服务。
  \n&#160;&#160;&#160;&#160;顶毅会竭尽全力保护用户的信息，但顶毅不能确信或保证任何个人信息的安全性，用户须自己承担风险。比如用户联机公布可被公众访问的个人信息时，用户有可能会收到未经用户同意的消息；顶毅的合作伙伴和可通过顶毅访问的第三方因特网站点和服务或通过抽奖、促销等活动得知用户个人信息的其他第三方会进行独立的数据收集工作等活动，顶毅对用户及其他任何第三方的上述行为，不负担任何责任。</string>
    <string name="a21">&#160;&#160;&#160;&#160;本服务条款之效力和解释均适用中华人民共和国之法律。如服务条款之任何一部分与中华人民共和国法律相抵触，则该部分条款应按法律规定重新解释，部分条款之无效或重新解释不影响其它条款之法律效力。
\n&#160;&#160;&#160;&#160;用户和顶毅一致同意凡因本服务所产生的纠纷双方应协商解决，协商不成任何一方可提交广州顶毅电子有限公司所在地法院诉讼裁决。</string>
    <string name="a22">&#160;&#160;&#160;&#160;用户对服务之任何部分或本服务条款的任何部分之意见及建议可通过客户服务部门与顶毅联系。</string>
    <string name="a23">&#160;&#160;&#160;&#160;地址：广东省广州市经济技术开发区科学城科学大道科汇一街7号701室
\n&#160;&#160;&#160;&#160;邮编：510000
\n&#160;&#160;&#160;&#160;电话：13650719038
\n&#160;&#160;&#160;&#160;网址：http://www.MiniUs.cn</string>
    
    <string name="lockscreen_access_pattern_start">"开始绘制图案"</string>
    <string name="lockscreen_access_pattern_cleared">"图案已清除"</string>
    <string name="lockscreen_access_pattern_cell_added">"已添加单元格"</string>
    <string name="lockscreen_access_pattern_detected">"图案绘制完成"</string>
    <string name="lockpattern_recording_intro_header">"绘制解锁图案"</string>
    <string name="lockpattern_settings_help_how_to_record">"如何绘制解锁图案"</string>
    <string name="lockpattern_recording_incorrect_too_short">"至少连接4个点，请重试"</string>
    <string name="lockpattern_pattern_entered_header">"图案已记录"</string>
    <string name="lockpattern_need_to_confirm">"请再次绘制解锁图案"</string>
    <string name="lockpattern_need_to_unlock_wrong">"与上次输入不一致，请重试"</string>
    <string name="lockpattern_pattern_confirmed_header">"确认保存新解锁图案"</string>
    <string name="lockpattern_pattern_unclockhint">"请绘制图案密码"</string>
    <string name="lockpattern_pattern_unclockwronghint">"密码不一致"</string>
    <string name="lockpattern_recording_inprogress">"完成后松开手指"</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
</resources>